// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Dynamic Side Content Below 1`] = `
<div
  dir="ltr"
>
      
  <div
    class="fd-dynamic-side fd-dynamic-side--below"
  >
    
        
    <div
      class="fd-dynamic-side__main"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
        Main
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dynamic-side__side"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        Side
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Dynamic Side Content Equal split 1`] = `
<div
  dir="ltr"
>
      
  <div
    class="fd-dynamic-side fd-dynamic-side--equal-split"
  >
    
        
    <div
      class="fd-dynamic-side__main"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
        Main
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dynamic-side__side"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        Side
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Dynamic Side Content Left 1`] = `
<div
  dir="ltr"
>
      
  <div
    class="fd-dynamic-side"
  >
    
        
    <div
      class="fd-dynamic-side__side"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        Side
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dynamic-side__main"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
        Main
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Dynamic Side Content Responsiveness 1`] = `
<div
  dir="ltr"
>
  
    
  <h4>
    On extra large screens, the main content area occupies 75% of the width.
  </h4>
  
    
  <div
    class="fd-dynamic-side fd-dynamic-side--xl"
  >
    
        
    <div
      class="fd-dynamic-side__side"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        Side
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dynamic-side__main"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
        Main
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <h4>
    On medium-sized screens, the main content area occupies 66.66% of the width.
  </h4>
  
    
  <div
    class="fd-dynamic-side fd-dynamic-side--md"
    style="max-width: 920px"
  >
    
        
    <div
      class="fd-dynamic-side__side"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        Side
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dynamic-side__main"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
        Main
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <h4>
    On small screens, the main content area occupies 100% of the width and the side content is hidden.
  </h4>
  
    
  <div
    class="fd-dynamic-side fd-dynamic-side--sm"
    style="max-width: 420px"
  >
    
        
    <div
      class="fd-dynamic-side__side"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        Side
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dynamic-side__main"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
        Main
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Dynamic Side Content Right 1`] = `
<div
  dir="ltr"
>
      
  <div
    class="fd-dynamic-side"
  >
    
        
    <div
      class="fd-dynamic-side__main"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
        Main
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dynamic-side__side"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        Side
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
